# numfin.github.io

./: Cargo.toml  Makefile.toml  index.html  main.css
src/: game.rs  lib.rs  main.rs
src/camera/: mod.rs
src/controls/: mod.rs
src/enemy/: enemy_movement.rs  limit_enemy_movement.rs  mod.rs  spawn_enemies.rs  update_enemy_rotation.rs
src/gameover/: mod.rs
src/player/: enemy_collision.rs  limit_player_movement.rs  mod.rs  player_movement.rs  spawn_player.rs
src/stars/: collect_stars.rs  mod.rs  spawn_over_time.rs
src/system_sets/: mod.rs
